# fiebatt

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  dev.sh  package.json  start-dev.sh
.agents/plugins/: marketplace.json
.commandcode/taste/: taste.md
.github/workflows/: ci.yml  deploy.yml  railway.yml
.opencode/plans/: fix-duration-overgen.md
ai/prompts/: edit_plan.txt
ai/services/: __init__.py  _stubs.py  config.py  happyhorse.py  logger.py  veo.py
ai/tests/: test_veo.py
apps/ai/: OWNERS.md
apps/cli/: SKILL.md  pyproject.toml
apps/cli/fiebatt_cli/: client.py  config.py  main.py  poll.py
apps/cli/fiebatt_cli/analysis/: extractor.py  runner.py
apps/cli/fiebatt_cli/commands/: accept.py  analyze.py  auth.py  batch.py  entities.py  export.py  generate.py  grade.py  identify.py  jobs.py  mask.py  narrate.py  preview.py  projects.py  propagate.py  remix.py  score.py  snapshot.py  split.py  timeline.py  trim.py  upload.py
apps/cli/tasks/: todo.md
apps/cli/tests/: test_client.py  test_commands.py  test_config.py  test_output.py  test_parsers.py  test_poll.py
cli/: SKILL.md
docs/: docs.json  index.mdx  pitch.md  privacy.md  quickstart.mdx  style.css  terms.md  veoterm-pitch.md
infra/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.gpu  deploy.sh  docker-compose.yml  nginx-admin.conf  nginx.conf
meshapi/: README.md  model-routing.json
scripts/: check_layout.py  clean_scratch.py  deploy_vultr.sh  dev_all.sh  dev_api.sh  dev_backend.sh  smoke.sh  spike_gemini.py  spike_veo.py
tasks/: lessons.md  todo.md
(+460 files in other folders)
